# crhpcs2025

./: .gitignore  CMakeLists.txt  README.md  setup.sh
basics/: CMakeLists.txt  run.slurm
basics/1.initialization/: main.cpp
basics/cpu_vs_gpu/: CMakeLists.txt  main.c  main.cu  main_block.c  main_naive.c  matrix.c  matrix.h
basics/heat_simulation/: CMakeLists.txt  main.cpp
basics/heat_simulation/BEGIN/: main.cpp
basics/heat_simulation/SOLUTION/: main.cpp
basics/initialization/: main.cpp
basics/k_means/: CMakeLists.txt  dataset.csv
basics/k_means/BEGIN/: main.cpp
basics/k_means/SOLUTION/: main.cpp
basics/k_means/gen_datasets/: gen_datasets.R  gen_datasets.r
basics/matmul/: CMakeLists.txt
basics/matmul/SOLUTION/: CMakeLists.txt  main.cpp
basics/pi_leibniz/BEGIN/: main.cpp
basics/pi_leibniz/SOLUTION/: CMakeLists.txt  main.cpp
build-gpu/: CMakeCache.txt  Makefile  cmake_install.cmake
build-gpu/basics/: Makefile  cmake_install.cmake
distributed_memory/1_hello_world/: helloworld.slurm  mpi_helloworld.cpp  mpi_helloworld.slurm
distributed_memory/2_p2p_comm/: deadlock.cpp  deadlock.slurm  p2p.cpp  p2p.slurm
distributed_memory/3_collectives/: barrier.cpp  run.slurm
distributed_memory/A_practice/: INSTRUCTIONS.md  findpi  findpi.cpp  findpi_2.cpp  findpi_mpi.cpp  findpi_mpi.slurm  matv  matv.cpp
distributed_memory/A_solutions/: findpi.cpp  findpi_2.cpp  findpi_solution_1.cpp  findpi_solution_3.cpp  matmul.cpp  run.slurm
visualization/random_walk/: random_walk.cpp  run.slurm
visualization/wave_equation/: wave_equation.cpp
(+94 files in other folders)
